fixed stretched webcast theater card thumb

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5377,17 +5377,16 @@ img.aligncenter {
 }
 
 /* line 46, ../scss/modules/_card.scss */
-.card__thumb, .card__thumb--full {
+.card__thumb, .card__thumb--scientist, .card__thumb--full {
   position: relative;
   max-width: 168px;
   width: 90%;
   margin: 8px 0;
   padding: 0 8px;
-  height: 240px;
   display: inline-block;
 }
-/* line 55, ../scss/modules/_card.scss */
-.card__thumb > img, .card__thumb--full > img {
+/* line 54, ../scss/modules/_card.scss */
+.card__thumb > img, .card__thumb--scientist > img, .card__thumb--full > img {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -5398,121 +5397,126 @@ img.aligncenter {
 }
 
 /* line 66, ../scss/modules/_card.scss */
+.card__thumb--scientist {
+  height: 240px;
+}
+
+/* line 71, ../scss/modules/_card.scss */
 .card__subtitle, .card__subtitle--theater {
   margin: 0 0 8px 0;
 }
 
-/* line 71, ../scss/modules/_card.scss */
+/* line 76, ../scss/modules/_card.scss */
 .card--scientist .card__subtitle, .card--scientist .card__subtitle--theater {
   font-size: 20px;
   font-size: 1.25rem;
 }
 
-/* line 77, ../scss/modules/_card.scss */
+/* line 82, ../scss/modules/_card.scss */
 .card__content {
   font-size: 16px;
   margin: 0 0 8px 0;
 }
 
-/* line 82, ../scss/modules/_card.scss */
+/* line 87, ../scss/modules/_card.scss */
 .card__thumb--full {
   width: 95%;
   max-width: none;
 }
 
-/* line 89, ../scss/modules/_card.scss */
+/* line 94, ../scss/modules/_card.scss */
 .card-container--full {
   max-width: 100%;
   min-height: 460px;
   margin-bottom: 24px;
   margin-bottom: 1.5rem;
 }
-/* line 95, ../scss/modules/_card.scss */
+/* line 100, ../scss/modules/_card.scss */
 .card-container--full .card--full {
   min-height: 460px;
   height: 100%;
 }
 
-/* line 101, ../scss/modules/_card.scss */
+/* line 106, ../scss/modules/_card.scss */
 .card--full {
   max-width: 100%;
 }
 
-/* line 107, ../scss/modules/_card.scss */
+/* line 112, ../scss/modules/_card.scss */
 .card-container--scientist {
   min-height: 265px;
 }
 
-/* line 112, ../scss/modules/_card.scss */
+/* line 117, ../scss/modules/_card.scss */
 .card--scientist {
   height: 325px;
 }
 
-/* line 117, ../scss/modules/_card.scss */
+/* line 122, ../scss/modules/_card.scss */
 .card--video {
   min-height: 220px;
 }
 
 @media screen and (max-width: 1200px) {
-  /* line 122, ../scss/modules/_card.scss */
+  /* line 127, ../scss/modules/_card.scss */
   .card-container--scientist {
     min-height: 305px;
   }
 
-  /* line 126, ../scss/modules/_card.scss */
+  /* line 131, ../scss/modules/_card.scss */
   .card--scientist {
     min-height: 285px;
   }
 }
 @media screen and (max-width: 769px) {
-  /* line 132, ../scss/modules/_card.scss */
+  /* line 137, ../scss/modules/_card.scss */
   .card-container--scientist {
     min-height: 285px;
   }
 
-  /* line 136, ../scss/modules/_card.scss */
+  /* line 141, ../scss/modules/_card.scss */
   .card--scientist {
     min-height: 265px;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 143, ../scss/modules/_card.scss */
+  /* line 148, ../scss/modules/_card.scss */
   .card-container--full {
     min-height: initial;
   }
-  /* line 145, ../scss/modules/_card.scss */
+  /* line 150, ../scss/modules/_card.scss */
   .card-container--full .card--program {
     max-height: 300px;
     min-height: 200px;
   }
 
-  /* line 151, ../scss/modules/_card.scss */
+  /* line 156, ../scss/modules/_card.scss */
   .card__text--program {
     display: none;
   }
 
-  /* line 155, ../scss/modules/_card.scss */
+  /* line 160, ../scss/modules/_card.scss */
   .card-container--scientist {
     min-height: 235px;
   }
 
-  /* line 159, ../scss/modules/_card.scss */
+  /* line 164, ../scss/modules/_card.scss */
   .card--scientist {
     min-height: 215px;
   }
-  /* line 161, ../scss/modules/_card.scss */
+  /* line 166, ../scss/modules/_card.scss */
   .card--scientist .card__subtitle, .card--scientist .card__subtitle--theater {
     font-size: 18px;
     font-size: 1rem;
   }
 }
 @media screen and (min-width: 400px) and (max-width: 480px) {
-  /* line 169, ../scss/modules/_card.scss */
+  /* line 174, ../scss/modules/_card.scss */
   .card-container--scientist {
     min-height: 285px;
   }
 
-  /* line 173, ../scss/modules/_card.scss */
+  /* line 178, ../scss/modules/_card.scss */
   .card--scientist {
     min-height: 265px;
   }
